--- a/_config.yml
+++ b/_config.yml
@@ -8,69 +8,72 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Zhilong Liu's Website"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Zhilong Liu"
+description              : &description "Ph.D. Candidate"
+url                      : https://ZhiLL_00.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "ZhiLL-00/ZhiLL_00.github.io"
+
+
+
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "profile.jpg"
+  name             : "Zhilong Liu"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  bio              : "Ph.D. Candidate, Beijing Jiaong University"
+  location         : "Beijing, China"
+  employer         : "Beijing Jiaotong University"
+  uri              : 
+  email            : "zhilongliu@bjtu.edu.cn" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  arxiv            : 
+  googlescholar    : "https://scholar.google.com/citations?user=X2W5qKMAAAAJ&hl=en"
+  impactstory      : 
+  orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-0401-5010"
+  pubmed           : 
+  researchgate     : "https://www.researchgate.net/profile/Zhilong-Liu-9"
 
   # Repositories and software development
-  bitbucket        : # Username - Update with your username on the site
-  codepen          : # Username
-  dribbble         : # Username
-  github           : "academicpages"
-  kaggle           : # Username  
-  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+  bitbucket        : 
+  codepen          : 
+  dribbble         : 
+  github           : "ZhiLL-00"
+  kaggle           :  
+  stackoverflow    : 
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
-  facebook         : # Username
-  flickr           : # Username
-  foursquare       : # Username
-  goodreads        : # Username
-  google_plus      : # Username
-  keybase          : # Username
-  instagram        : # Username
-  lastfm           : # Username
-  linkedin         : # Username
-  mastodon         : # URL
-  medium           : # URL
-  pinterest        : # Username
-  soundcloud       : # Username
-  steam            : # Username
-  telegram         : # URL
-  tumblr           : # Username
-  twitter          : # Username for X / Twitter
-  vine             : # Username
-  weibo            : # Username
-  wikipedia        : # Username
-  xing             : # Username
-  youtube          : # Username
-  zhihu            : # URL
+  bluesky          : 
+  facebook         : 
+  flickr           : 
+  foursquare       : 
+  goodreads        : 
+  google_plus      : 
+  keybase          : 
+  instagram        : 
+  lastfm           : 
+  linkedin         : 
+  mastodon         : 
+  medium           : 
+  pinterest        : 
+  soundcloud       : 
+  steam            : 
+  telegram         : 
+  tumblr           : 
+  twitter          : 
+  vine             : 
+  weibo            : 
+  wikipedia        : 
+  xing             : 
+  youtube          : 
+  zhihu            :
 
 
 # Site Settings
@@ -211,7 +214,12 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
-
+  submitted:
+    output: true
+    permalink: /:collection/:path/
+  award:
+    output: true
+    permalink: /:collection/:path/    
 
 # Defaults
 defaults:
@@ -251,6 +259,16 @@ defaults:
       author_profile: true
       share: true
       comments: true
+  # _submitted papers
+  - scope:
+      path: ""
+      type: submitted
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: true
+
   # _portfolio
   - scope:
       path: ""
@@ -260,6 +278,15 @@ defaults:
       author_profile: true
       share: true
       comment: true
+  # _award
+  - scope:
+      path: ""
+      type: award
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: true    
   # _talks
   - scope:
       path: ""
