--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Zhilong Liu's Website"
 title_separator          : "-"
 name                     : &name "Zhilong Liu"
 description              : &description "Ph.D. Candidate"
-url                      : https://ZhiLL_00.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://ZhiLL_00.github.io/ 
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ZhiLL-00/ZhiLL_00.github.io"
 
@@ -24,7 +24,7 @@ repository               : "ZhiLL-00/ZhiLL_00.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.jpg"
+  avatar           : # "profile.jpg"
   name             : "Zhilong Liu"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Candidate, Beijing Jiaong University"
