--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ repository               : "ZhiLL-00/ZhiLL_00.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : # "profile.jpg"
+  avatar           : "profile.jpg"
   name             : "Zhilong Liu"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Candidate, Beijing Jiaong University"
