--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Zhilong Liu"
   pronouns         : # example: "she/her"  
-  bio              : "Ph.D. Candidate, Beijing Jiaong University"
+  bio              : "Ph.D. Candidate, Beijing Jiaotong University"
   location         : "Beijing, China"
   employer         : "Beijing Jiaotong University"
   uri              : 
